# transaction-service/src/main/java/com/tmq/transaction_service/entity/WalletEntity.java
@@ -1,4 +1,50 @@
 package com.tmq.transaction_service.entity;
 
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.math.BigDecimal;
+import java.time.Instant;
+import java.util.UUID;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder(toBuilder = true)
+@Entity
+@Table(name = "wallets")
 public class WalletEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.UUID)
+    @Column(name = "uid")
+    private UUID id;
+
+    @Column(name = "name", nullable = false)
+    private String name;
+
+    @Column(name = "status", nullable = false)
+    private String status;
+
+    @OneToOne(optional = false)
+    @JoinColumn(name = "wallet_type_uid", nullable = false)
+    private WalletTypeEntity walletTypeEntity;
+
+    @Column(name = "balance", nullable = false)
+    private BigDecimal balance;
+
+    @Column(name = "created_at", nullable = false)
+    private Instant createdAt;
+
+    @Column(name = "modified_at")
+    private Instant modifiedAt;
+
+    @Column(name = "archived_at", nullable = false)
+    private Instant archivedAt;
+
+    @Column(name = "user_uid", nullable = false)
+    private UUID userId;
+
 }
